crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__methodmaps__methodmap_complex_1.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/methodmaps.rs
assertion_line: 501
expression: "goto_definition(r#\"\n%! main.sp\nmethodmap Foo {\n    public native Foo Bar();\n                       |\n                       ^\n    public native int Baz();\n    property int Qux {\n        public native get();\n    }\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 1,
        "character": 22
      },
      "end": {
        "line": 1,
        "character": 25
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 1,
        "character": 4
      },
      "end": {
        "line": 1,
        "character": 28
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 1,
        "character": 22
      },
      "end": {
        "line": 1,
        "character": 25
      }
    }
  }
]
